--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17287,19 +17287,19 @@ input {
   min-width: 70px;
   margin-right: 10px;
 }
-#containerBtn .btnBorderWidth:nth-of-type(2) {
+#containerBtn .btnBorderWidth:nth-of-type(1) {
   border: solid 2px black;
 }
-#containerBtn .btnBorderWidth:nth-of-type(3) {
+#containerBtn .btnBorderWidth:nth-of-type(2) {
   border-top: solid 2px black;
 }
-#containerBtn .btnBorderWidth:nth-of-type(4) {
+#containerBtn .btnBorderWidth:nth-of-type(3) {
   border-right: solid 2px black;
 }
-#containerBtn .btnBorderWidth:nth-of-type(5) {
+#containerBtn .btnBorderWidth:nth-of-type(4) {
   border-bottom: solid 2px black;
 }
-#containerBtn .btnBorderWidth:nth-of-type(6) {
+#containerBtn .btnBorderWidth:nth-of-type(5) {
   border-left: solid 2px black;
 }
 #containerBtn .btnCorner {
@@ -17341,7 +17341,7 @@ input {
 .styleZone {
   width: 500px;
   height: 250px;
-  border: solid 2px black;
+  background-color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
