--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -44,15 +44,15 @@ input
         height: 50px
         min-width: 70px
         margin-right: 10px
-        &:nth-of-type(2)
+        &:nth-of-type(1)
             border: solid 2px black
-        &:nth-of-type(3)
+        &:nth-of-type(2)
             border-top: solid 2px black
-        &:nth-of-type(4)
+        &:nth-of-type(3)
             border-right: solid 2px black
-        &:nth-of-type(5)
+        &:nth-of-type(4)
             border-bottom: solid 2px black
-        &:nth-of-type(6)
+        &:nth-of-type(5)
             border-left: solid 2px black
     .btnCorner
         height: 50px
@@ -85,5 +85,4 @@ input
 .styleZone
     width: 500px
     height: 250px
-    border: solid 2px black
-    
+    background-color: white
